fix z-index on css of modal

--- a/app/assets/stylesheets/components/_modalmessagerie.scss
+++ b/app/assets/stylesheets/components/_modalmessagerie.scss
@@ -1,12 +1,7 @@
 // Model part
-.modal-content {
-  z-index: 5;
-}
-
 .modal {
   display: block;
   position: fixed;
-  z-index: 1;
   padding-top: 5%;
   left: 0;
   top: 0;
